refactor the code and make it more readable and make it more simple for especially for startup class___